[package]
name = "egui_overlay"
version = "0.8.1"
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Egui integration to easily create Desktop Overlays"

[features]
default = ["egui_default", "glfw_default", "three_d"]
egui_default = ["egui/default"]
glfw_default = ["egui_window_glfw_passthrough/default"]
three_d = ["dep:egui_render_three_d"]
wgpu = ["dep:egui_render_wgpu"]

[dependencies]
egui_window_glfw_passthrough = { version = "0.8", path = "crates/egui_window_glfw_passthrough", default-features = false }
egui = { workspace = true }
tracing = { workspace = true }
raw-window-handle = { workspace = true }
egui_render_three_d = { version = "0.8", path = "crates/egui_render_three_d", optional = true }
# because opengl doesn't work on mac :((
egui_render_wgpu = { version = "0.8", path = "crates/egui_render_wgpu", optional = true }


[workspace.dependencies]
egui = { version = "0.26", default-features = false }
bytemuck = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
raw-window-handle = { version = "0.6" }
egui_overlay = { version = "0.8", path = "." }
egui_render_three_d = { version = "0.8", path = "crates/egui_render_three_d" }
egui_render_wgpu = { version = "0.8", path = "crates/egui_render_wgpu" }
egui_window_glfw_passthrough = { version = "0.8", path = "crates/egui_window_glfw_passthrough" }

[workspace]
members = [
    "crates/egui_render_three_d",
    "crates/egui_render_glow",
    "crates/egui_render_wgpu",
    "crates/egui_window_glfw_passthrough",
    "examples/*",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.8.0"
repository = "https://github.com/coderedart/egui_overlay"
