[package]
name = "egui_render_glow"
description = "egui rendering backend using glow"
version = "0.9.1"
repository.workspace = true
edition.workspace = true
license.workspace = true

[features]
check_gl_error = [] # will slow down your app, as error checking synchronizes gl drivers

[dependencies]
tracing = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true, features = ["bytemuck"] }
raw-window-handle = { workspace = true }
glow = { version = "0.13" } # upgrade when three-d does

[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
getrandom = { version = "0.2", features = [
    "js",
] } # https://github.com/emilk/egui/issues/2009
js-sys = { version = "0.3" }
