[package]
name = "egui_render_three_d"
description = "egui rendering backend using three-d"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
egui_render_glow = { version = "0.7", path = "../egui_render_glow" }
three-d = { version = "0.16", default-features = false }
egui = { workspace = true }
raw-window-handle = { workspace = true }
