[package]
name = "egui_render_wgpu"
description = "egui rendering backend using wgpu"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu = { version = "23" }
pollster = { version = "0.3" }
tracing = { workspace = true }
bytemuck = { workspace = true }
raw-window-handle = { workspace = true }
egui = { workspace = true, features = ["bytemuck"] }
