[package]
name = "egui_window_glfw_passthrough"
description = "egui windowing backend using Glfw"
version = "0.8.1"
repository.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["glfw/default"]
all = ["glfw_sys", "vulkan", "wayland", "log", "image"]
glfw_sys = ["glfw/glfw-sys-passthrough"]
vulkan = ["glfw/vulkan"]
wayland = ["glfw/wayland"]
log = ["glfw/log"]
image = ["glfw/image"]


[dependencies]
glfw = { version = "0.55", package = "glfw-passthrough", default-features = false }
tracing = { workspace = true }
egui = { workspace = true }
