[package]
name = "icon"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "shows how we can set a window icon"
publish = false

[features]
three_d = ["dep:egui_render_three_d"]
wgpu = ["dep:egui_render_wgpu"]

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui = { workspace = true }
egui_overlay = { workspace = true }
egui_window_glfw_passthrough = { workspace = true, features = ["image"] }
egui_render_three_d = { workspace = true, optional = true }
egui_render_wgpu = { workspace = true, optional = true }
image = { version = "0" }
