[package]
name = "triangle"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Shows how we can use egui_overlay crate to render egui and use three-d crate to render a triangle at the same time"
publish = false


[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui = { workspace = true }
egui_render_three_d = { workspace = true }
egui_overlay = { workspace = true, default-features = true}
egui_window_glfw_passthrough = { workspace = true }
